--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -10,7 +10,7 @@
       </div>
       <div class="row g-6">
         <div class="col-6 offset-3 border-secondary shadow py-3 px-5 rounded">
-          <form class="form_container" method="post" action="/user/add" enctype="application/x-www-form-urlencoded">
+          <form class="form_container" method="post" action="/users/add" enctype="application/x-www-form-urlencoded">
             <div class="form-group mb-1">
               <label for="name" class="form-label"></label>
               <div class="">
