--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,12 +23,12 @@
                 <input type="password" class="form-control" id="password" placeholder="Password" name="password">
               </div>
             </div>
-            <div class="form-group mb-5">
+            <!-- <div class="form-group mb-5">
               <label for="confirm_password" class="form-label"></label>
               <div class="">
                 <input type="password" class="form-control" id="repeat_password" placeholder="Confirm Password" name="repeat_password">
               </div>
-            </div>
+            </div> -->
             <div class="form-group mb-3">
               <div class="text-center">
                 <input type="submit" class="btn btn-primary" id="submit" value="Login" >
